--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
+    "mongoose": "^8.5.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
