--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "mongoose": "^8.5.1",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
