--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.1.6",
+    "jsdom": "^24.1.1",
     "mongoose": "^8.5.1",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.20",
