--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "dompurify": "^3.1.6",
     "jsdom": "^24.1.1",
     "mongoose": "^8.5.1",
-    "next": "14.0.4",
+    "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.20",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5"
