--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.6",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.1.6",
     "jsdom": "^24.1.1",
@@ -18,6 +19,7 @@
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
