--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
+    "cloudinary": "^2.5.1",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.1.6",
     "jsdom": "^24.1.1",
